WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48086
Silverlight doesn't repaint in WebKit2
https://bugs.webkit.org/show_bug.cgi?id=48086
Summary
Silverlight doesn't repaint in WebKit2
Adam Roben (:aroben)
Reported
2010-10-21 12:25:37 PDT
Silverlight doesn't repaint in WebKit2
Attachments
Patch
(20.09 KB, patch)
2010-10-21 12:27 PDT
,
Adam Roben (:aroben)
no flags
Details
Formatted Diff
Diff
Patch
(20.23 KB, patch)
2010-10-21 13:34 PDT
,
Adam Roben (:aroben)
no flags
Details
Formatted Diff
Diff
Patch
(20.23 KB, patch)
2010-10-21 14:03 PDT
,
Adam Roben (:aroben)
andersca
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-10-21 12:27:35 PDT
Created
attachment 71471
[details]
Patch
Adam Roben (:aroben)
Comment 2
2010-10-21 12:30:22 PDT
<
rdar://problem/8482944
>
Early Warning System Bot
Comment 3
2010-10-21 12:39:54 PDT
Attachment 71471
[details]
did not build on qt: Build output:
http://queues.webkit.org/results/4635012
Adam Roben (:aroben)
Comment 4
2010-10-21 13:34:14 PDT
Created
attachment 71482
[details]
Patch
Early Warning System Bot
Comment 5
2010-10-21 13:49:47 PDT
Attachment 71482
[details]
did not build on qt: Build output:
http://queues.webkit.org/results/4654014
Adam Roben (:aroben)
Comment 6
2010-10-21 14:03:29 PDT
Created
attachment 71486
[details]
Patch
Adam Roben (:aroben)
Comment 7
2010-10-21 14:46:05 PDT
Committed
r70265
: <
http://trac.webkit.org/changeset/70265
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug