Invalidate the plugin's HWND when NPN_InvalidateRect is called

Fixes <http://webkit.org/b/48086> <rdar://problem/8482944> Silverlight
doesn't repaint in WebKit2

Reviewed by Anders Carlsson.

WebKit2:

* WebProcess/Plugins/Netscape/NetscapePlugin.cpp:
(WebKit::NetscapePlugin::invalidate): Call platformInvalidate before
invalidating via the PluginController.

* WebProcess/Plugins/Netscape/NetscapePlugin.h: Added platformInvalidate.

* WebProcess/Plugins/Netscape/mac/NetscapePluginMac.mm:
(WebKit::NetscapePlugin::platformInvalidate):
* WebProcess/Plugins/Netscape/qt/NetscapePluginQt.cpp:
(WebKit::NetscapePlugin::platformInvalidate):
Stubbed out.

* WebProcess/Plugins/Netscape/win/NetscapePluginWin.cpp:
(WebKit::NetscapePlugin::platformInvalidate): If the plugin is
windowed, invalidate its HWND via ::InvalidateRect.

WebKitTools:

Test that the plugin's HWND is invalidated when NPN_InvalidateRect is
called

* DumpRenderTree/TestNetscapePlugIn/PluginTest.cpp:
(PluginTest::NPN_InvalidateRect): Added. Calls through to the browser.
(executeScript): Added. Asks the browser to evaluate the script.

(PluginTest::waitUntilDone):
(PluginTest::notifyDone):
Added. Calls through to layoutTestController.

* DumpRenderTree/TestNetscapePlugIn/PluginTest.h: Added
* NPN_InvalidateRect and waitUntilDone/notifyDone.

* DumpRenderTree/TestNetscapePlugIn/Tests/win/NPNInvalidateRectInvalidatesWindow.cpp: Added.
(TemporaryWindowMover::moveSucceeded):
(TemporaryWindowMover::TemporaryWindowMover):
(TemporaryWindowMover::~TemporaryWindowMover):
This class moves a window on-screen and shows it, then moves it back and hides it.

(NPNInvalidateRectInvalidatesWindow::NPNInvalidateRectInvalidatesWindow):
Initialize our members.
(NPNInvalidateRectInvalidatesWindow::~NPNInvalidateRectInvalidatesWindow):
Delete our window mover if it hasn't been deleted already.
(NPNInvalidateRectInvalidatesWindow::NPP_SetWindow): Subclass the
plugin HWND and move the test harness window on screen.
(NPNInvalidateRectInvalidatesWindow::wndProc): Call through to onPaint
when we get a WM_PAINT message.
(NPNInvalidateRectInvalidatesWindow::onPaint): Do the test and tell
LayoutTestController we're done.
(NPNInvalidateRectInvalidatesWindow::testInvalidateRect): Validate
ourselves, invalidate our lower-right quadrant via NPN_InvalidateRect,
then check that our HWND's invalid region is the rect that we
invalidated.

* DumpRenderTree/TestNetscapePlugIn/win/TestNetscapePlugin.vcproj:
* Added NPNInvalidateRectInvalidatesWindow.

LayoutTests:

Test that the plugin's HWND is invalidated when NPN_InvalidateRect is
called

* platform/win/plugins/npn-invalidate-rect-invalidates-window-expected.txt: Added.
* platform/win/plugins/npn-invalidate-rect-invalidates-window.html: Added.

Canonical link: https://commits.webkit.org/60816@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70265 268f45cc-cd09-0410-ab3c-d52691b4dbfc