WebKit2/WebProcess/Plugins/Netscape/qt/NetscapePluginQt.cpp
@@ -45,6 +45,12 @@ void NetscapePlugin::platformDestroy()
     notImplemented();
 }
 
+bool NetscapePlugin::platformInvalidate(const IntRect&)
+{
+    notImplemented();
+    return false;
+}
+
 void NetscapePlugin::platformGeometryDidChange()
 {
     notImplemented();
