WebKitTools/DumpRenderTree/TestNetscapePlugIn/PluginTest.h
@@ -60,6 +60,7 @@ public:
     virtual NPError NPP_SetWindow(NPP, NPWindow*);
 
     // NPN functions.
+    void NPN_InvalidateRect(NPRect* invalidRect);
     NPIdentifier NPN_GetStringIdentifier(const NPUTF8* name);
     NPIdentifier NPN_GetIntIdentifier(int32_t intid);
     NPError NPN_GetValue(NPNVariable, void* value);
@@ -87,6 +88,9 @@ protected:
     NPP m_npp;
 
     const std::string& identifier() const { return m_identifier; }
+
+    void waitUntilDone();
+    void notifyDone();
 
     // NPObject helper template.
     template<typename T> struct Object : NPObject {
